devel
-----


3.12.6 (2025-10-22)
-------------------

* Added automatic authentication via /_open/auth to client tools as well as
  automatic JWT token renewals. Made the expiry time of the generated JWT token
  configurable (within the boundaries of the new options
  --auth.minimal-jwt-expiry-time and --auth.maximal-jwt-expiry-time).
  This is needed for SSO on the platform to work with client tools.

* FE-825: add new logo, update colors based on new branding.

* FE-835: Escape HTML in notifications.

* Improved performance of filtered vector index queries by batching document
  fetches during index iteration.

* Fix BTS-2226: Fix INSERT with overwriteMode: "ignore" failing when run
  multiple times on smart graph edge collections in cluster mode. The issue
  occurred when inserting edges that already existed, causing the operation to
  fail instead of silently ignoring duplicates as expected.

* Add option --server.jwt-token to arangosh and all other client tools.
  This allows you to login with a JWT token that is valid for the system.
  You can get this token from the _open/auth endpoint. You need to either pick
  username and password, or the JWT token when starting a client tool. Please
  note: You can write "--server.jwt-token -" to get prompted for the token, so
  it is not visible in the process list.

* Fix defaults for inverted indexes and views. Consolidations 5 times less
  frequently, with minimum of 50(1 before) segments and 24M bytes (2M before),
  maximum 200 (10 before) segments and 8G bytes (800M before).

* Fix BTS-2231: Fix a divide-by-zero crash in case a smart edge collection is
  used in a collect query with a custom index.

* Add API for deployment ID: /_admin/deployment/id.

* Rename the `--experimental-vector-index` startup option to `--vector-index`
  and remove the experimental flag. The old name can still be used to enable the
  vector index feature.

* Add vertex collections for graph queries using edge collection syntax from