@@ -8904,6 +8904,7 @@ void arangodb::aql::insertDistributeInputCalculation(ExecutionPlan& plan) {
     auto createKeys = bool{false};
     auto allowKeyConversionToObject = bool{false};
     auto allowSpecifiedKeys = bool{false};
+    bool canProjectOnlyId{false};
 
     DistributeType fixupGraphInput = DistributeType::DOCUMENT;
 
@@ -8928,6 +8929,9 @@ void arangodb::aql::insertDistributeInputCalculation(ExecutionPlan& plan) {
         };
 
         alternativeVariable = insertNode->oldSmartGraphVariable();
+        if (alternativeVariable != nullptr) {
+          canProjectOnlyId = true;
+        }
 
       } break;
       case ExecutionNode::REMOVE: {
@@ -9094,6 +9098,8 @@ void arangodb::aql::insertDistributeInputCalculation(ExecutionPlan& plan) {
               ast->createNodeValueBool(allowSpecifiedKeys)));
           flags->addMember(ast->createNodeObjectElement(
               "ignoreErrors", ast->createNodeValueBool(ignoreErrors)));
+          flags->addMember(ast->createNodeObjectElement(
+              "projectOnlyId", ast->createNodeValueBool(canProjectOnlyId)));
           auto const& collectionName = collection->name();
           flags->addMember(ast->createNodeObjectElement(
               "collection",
