@@ -738,7 +738,7 @@ function optimizerRuleTestSuite () {
       const output = explainer.explain(query, {...thisRuleEnabled, colors: false}, false);
       const variable = output.match(/LET #([0-9]) = MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION/);
       assertTrue(variable);
-      assertTrue(output.includes(`MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION(k, null, { "allowSpecifiedKeys" : false, "ignoreErrors" : false, "collection" : "${cn1}" })`));
+      assertTrue(output.includes(`MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION(k, null, { "allowSpecifiedKeys" : false, "ignoreErrors" : false, "projectOnlyId" : false, "collection" : "${cn1}" })`));
       assertTrue(output.includes(`DISTRIBUTE #${variable[1]}`));
       assertTrue(output.includes(`INSERT #${variable[1]}`));
     },
@@ -751,7 +751,7 @@ function optimizerRuleTestSuite () {
       const inputVar = output.match(/LET #([0-9]+) = \{ \"miau\" : 42 \}/);
       assertTrue(distributeVar);
       assertTrue(inputVar);
-      assertTrue(output.includes(`MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION($OLD, #${inputVar[1]}, { "allowSpecifiedKeys" : true, "ignoreErrors" : false, "collection" : "${cn1}" })`));
+      assertTrue(output.includes(`MAKE_DISTRIBUTE_INPUT_WITH_KEY_CREATION($OLD, #${inputVar[1]}, { "allowSpecifiedKeys" : true, "ignoreErrors" : false, "projectOnlyId" : false, "collection" : "${cn1}" })`));
       assertTrue(output.includes(`DISTRIBUTE #${distributeVar[1]}`));
       assertTrue(output.includes(`UPSERT $OLD INSERT #${distributeVar[1]} UPDATE`));
     },
